[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr"] }
console_log = "1"
log = "0.4"
rand = "0.8.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos_router = { version = "0.6.10", features = ["csr"] }
